--- a/webrtc/websocket/videosignal/app/videochat.html
+++ b/webrtc/websocket/videosignal/app/videochat.html
@@ -10,7 +10,7 @@
           <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
           <link href="css/style.css" rel="stylesheet"/>
          <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
-         <script src="https://kit.fontawesome.com/5ab677aefc.js" crossorigin="anonymous"></script>
+         <!-- <script src="https://kit.fontawesome.com/5ab677aefc.js" crossorigin="anonymous"></script> -->
     </head>
 
 
