--- a/webrtc/p5/index.html
+++ b/webrtc/p5/index.html
@@ -39,10 +39,10 @@
   <script>
 let ex1Toolbar=null;
 
-window.addEventListener('load', function () {
-  var ex1 = document.getElementById('ex1');
-   ex1Toolbar = new aria.Toolbar(ex1.querySelector('[role="toolbar"]'));
-});
+// window.addEventListener('load', function () {
+//   var ex1 = document.getElementById('ex1');
+//    ex1Toolbar = new aria.Toolbar(ex1.querySelector('[role="toolbar"]'));
+// });
   </script>
 </body>
 
