--- a/webrtc/websocket/videosignal/app/videochat(复件).html
+++ b/webrtc/websocket/videosignal/app/videochat(复件).html
@@ -18,9 +18,11 @@
 
     <div class="mainContainer">
 
-        <!-- <video id="filevideo" playsinline autoplay controls loop muted style="display: none;">
+        <video id="filevideo" playsinline autoplay controls loop muted style="display: none;">
             <source src="video/chrome.webm" type="video/webm"/>
-        </video> -->
+            <source src="video/chrome.mp4" type="video/mp4"/>
+            <p>This browser does not support the video element.</p>
+        </video>
 
         <div class="mainLeft">
  
