--- a/webrtc/p5/index.html
+++ b/webrtc/p5/index.html
@@ -11,12 +11,31 @@
       margin: 0;
     }
   </style>
+
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
 <link href="css/toolbar.css"    rel="stylesheet">
   <script src="public/js/p5.min.js"></script>
    
 </head>
 
 <body  id="ex1">
+  <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+    <div class="btn-group me-2" role="group" aria-label="First group">
+      <button type="button" class="btn btn-primary">1</button>
+      <button type="button" class="btn btn-primary">2</button>
+      <button type="button" class="btn btn-primary">3</button>
+      <button type="button" class="btn btn-primary">4</button>
+    </div>
+    <div class="btn-group me-2" role="group" aria-label="Second group">
+      <button type="button" class="btn btn-secondary">5</button>
+      <button type="button" class="btn btn-secondary">6</button>
+      <button type="button" class="btn btn-secondary">7</button>
+    </div>
+    <div class="btn-group" role="group" aria-label="Third group">
+      <button type="button" class="btn btn-info">8</button>
+    </div>
+  </div>
   <div  class="toolbar" role="toolbar">
     <div class="toolbar-item" role="button" tabindex="0" onclick="clear();zhangxk.clear();setup()">新的一页</div>
     <div class="toolbar-item selected" role="button" tabindex="0" onclick="mode=MODE_EDIT">铅笔</div>
@@ -34,7 +53,7 @@
   <script src="js/utils.js"></script>
   <script src="js/toolbar.js"></script>
   <script src="js/easycanvas.js"></script>
-  <script src="js/sketch.js"></script>
+  <script src="js/a.js"></script>
 
   <script>
 let ex1Toolbar=null;
