--- a/webrtc/kurento/src/main/resources/static/helloworld/index.html
+++ b/webrtc/kurento/src/main/resources/static/helloworld/index.html
@@ -34,7 +34,7 @@
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse"
               data-target=".navbar-collapse"></button>
-          <a class="navbar-brand" href=".">Kurento Tutorial</a>
+          <a class="navbar-brand" href="../">Kurento Tutorial</a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
