--- a/webrtc/kurento/src/main/resources/static/helloworld/index.html
+++ b/webrtc/kurento/src/main/resources/static/helloworld/index.html
@@ -20,9 +20,9 @@
   <script src="/webjars/webrtc-adapter/release/adapter.js"></script>
 
   <!-- Kurento -->
-  <link rel="stylesheet" href="/css/kurento.css">
+  <link rel="stylesheet" href="css/kurento.css">
   <script src="/js/kurento-utils.min.js"></script> <!-- JAR from Maven -->
-  <script src="/js/index.js"></script>
+  <script src="js/index.js"></script>
 
   <title>Kurento Java Tutorial - Hello World</title>
 </head>
@@ -53,7 +53,7 @@
       <h1>Kurento Java Tutorial - Hello World1 (WebRTC in loopback)</h1>
       <p>
         This web application shows a <i>WebRtcEndpoint</i> connected to itself
-        (loopback). Take a look to the <a href="/img/pipeline.png"
+        (loopback). Take a look to the <a href="img/pipeline.png"
           data-toggle="lightbox" data-title="Hello World Media Pipeline"
           data-footer="WebRtcEnpoint in loopback">Media Pipeline</a>.
       </p>
@@ -71,7 +71,7 @@
       <div class="col-md-5">
         <h3>Local stream</h3>
         <video id="uiLocalVideo" playsinline muted
-            width="480px" height="360px" poster="/img/webrtc.png"></video>
+            width="480px" height="360px" poster="img/webrtc.png"></video>
       </div>
       <div class="col-md-2">
         <a id="uiStartBtn" href="#" class="btn btn-success">
@@ -84,7 +84,7 @@
       <div class="col-md-5">
         <h3>Remote stream</h3>
         <video id="uiRemoteVideo" playsinline
-            width="480px" height="360px" poster="/img/webrtc.png"></video>
+            width="480px" height="360px" poster="img/webrtc.png"></video>
       </div>
     </div>
     <div class="row">
@@ -105,18 +105,18 @@
         <div class="row">
           <div class="col-md-4">
             <a href="https://www.urjc.es/">
-              <img src="/img/urjc.gif" height="50px"
+              <img src="img/urjc.gif" height="50px"
                   alt="Universidad Rey Juan Carlos">
             </a>
           </div>
           <div class="col-md-4">
             <a href="https://www.kurento.org/">
-              <img src="/img/kurento.png" height="50px" alt="Kurento">
+              <img src="img/kurento.png" height="50px" alt="Kurento">
             </a>
           </div>
           <div class="col-md-4">
             <a href="https://www.naevatec.com/">
-              <img src="/img/naevatec.png" height="50px" alt="Naevatec">
+              <img src="img/naevatec.png" height="50px" alt="Naevatec">
             </a>
           </div>
         </div>
