--- a/webrtc/kurento/src/main/resources/static/groupCall/index.html
+++ b/webrtc/kurento/src/main/resources/static/groupCall/index.html
@@ -4,9 +4,9 @@
 <link rel="styleSheet" href="style.css" type="text/css" media="screen">
 
 <script src="/webjars/webrtc-adapter/release/adapter.js"></script>
-<script src="./js/conferenceroom.js"></script>
-<script src="./js/participant.js"></script>
-<script src="./js/kurento-utils.js"></script>
+<script src="js/conferenceroom.js"></script>
+<script src="js/participant.js"></script>
+<script src="/js/kurento-utils.js"></script>
 </head>
 <body>
 	<div id="container">
